Display posts. Add posts.

--- a/app/frontend/scss/_main.scss
+++ b/app/frontend/scss/_main.scss
@@ -12,6 +12,7 @@
 .message{
     padding: 20px;
     background-color: #f0f0f0;
+    margin-bottom: 20px;
 }
 .message-text{
     margin-bottom: 10px;
